[build-system]
requires = ["scikit-build-core>=0.5", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyopencap"
version = "1.2.8"
description = "An open source package for metastable electronic states in molecules."
readme = "README.md"
license = "MIT"
authors = [
    {name = "James Gayvert", email = "jrg444@gmail.com"}
]
dependencies = [
    "numpy>=1.19",
    "pandas>=1.3.5",
    "scipy>=1.7.0",
]

[project.urls]
"Source code" = "https://github.com/gayverjr/opencap"
"Documentation" = "https://gayverjropencap.readthedocs.io/en/latest/"

[tool.scikit-build]
cmake.source-dir = "opencap"
cmake.args = ["-DBUILD_PYOPENCAP=ON", "-DBUILD_OPENCAP=OFF"]
wheel.packages = ["pyopencap"]
